responsiveness in all pages, font size adjusted

--- a/html/comoreservar.html
+++ b/html/comoreservar.html
@@ -37,16 +37,16 @@
     </header>
     <main>
         <section>
-            <h1 class="fontColorOne">Como reservar con Aspen Rent a Car?</h1>
+            <h1 class="fontColorOne spaceOne">Como reservar con Aspen Rent a Car?</h1>
             <div class="containerThree">
-            <div class="containerFour">
+            <div class="containerEight">
                 <img src="../img/uno.jpg" alt="icono con el numero 1">
                 <br>
                 <img src="../img/autonegro.jpg" alt="icono de un auto">
                 <h4><span class="fontColorOne">Nuestra Flota</span></h4>
                 <p>Chequea nuestra flota y decide cual se ajusta a tus necesidades</p>
             </div>
-            <div class="containerFour">
+            <div class="containerEight">
                 <img src="../img/dos.jpg" alt="icono con el numero 2">
                 <br>
                 <img src="../img/signopregunta.jpg" alt="icono de un signo de pregunta>">
@@ -54,7 +54,7 @@
                 <p>Asegurate de leer los Términos y Condiciones generales.</p>
                 <p>Si aún tienes dudas, encontrarás la sección dedicada preguntas frequentes</p>
             </div>
-            <div class="containerFour">
+            <div class="containerEight">
                 <img src="../img/tres.jpg" alt="icono con el numero 3">
                 <br>
                 <img src="../img/Calendario.jpg" alt="icono de un calendario">
@@ -64,7 +64,7 @@
                     efectuar
                     el pago de tu reserva según condiciones.</p>
             </div>
-            <div class="containerFour">
+            <div class="containerEight">
                 <img src="../img/cuatro.jpg" alt="icono con el numero 4">
                 <br>
                 <img src="../img/tick.jpg" alt="Icono de un tilde">
