--- a/html/flota.html
+++ b/html/flota.html
@@ -4,9 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="../css/style.css">
-    
+
     <title>Flota - Aspen Rent a Car</title>
 </head>
 
@@ -38,29 +39,7 @@
     </header>
     <main>
         <section>
-            <h1 class="fontColorOne">Flota</h1>
-            <nav>
-                <ul class="listOne">
-                    <a href="#economico" class="fontColorOne">
-                        <li>Economico</li>
-                    </a>
-                    <a href="#compacto" class="fontColorOne">
-                        <li>Compacto</li>
-                    </a>
-                    <a href="#mediano" class="fontColorOne">
-                        <li>Mediano</li>
-                    </a>
-                    <a href="#medianoGrande" class="fontColorOne">
-                        <li>Mediano Grande</li>
-                    </a>
-                    <a href="#monoVolumen" class="fontColorOne">
-                        <li>Mono Volumen</li>
-                    </a>
-                    <a href="#suv" class="fontColorOne">
-                        <li>SUV</li>
-                    </a>
-                </ul>
-            </nav>
+            <h1 class="fontColorOne">Flota</h1> <br>
             <h3 class="fontColorThree" id="economico">Económico</h3>
             <div class="containerSix">
                 <div class="containerSeven">
@@ -113,7 +92,7 @@
                 </div>
             </div>
 
-            <h3 class="fontColorThree" id="compacto">Compacto</h3>
+            <h3 class="fontColorThree spaceOne" id="compacto">Compacto</h3>
 
             <div class="containerSix">
                 <div class="containerSeven">
@@ -167,7 +146,7 @@
 
             </div>
 
-            <h3 class="fontColorThree" id="mediano">Mediano</h3>
+            <h3 class="fontColorThree spaceOne" id="mediano">Mediano</h3>
 
             <div class="containerSix">
                 <div class="containerSeven">
@@ -221,7 +200,7 @@
 
             </div>
 
-            <h3 class="fontColorThree" id="medianoGrande">Mediano Grande</h3>
+            <h3 class="fontColorThree spaceOne" id="medianoGrande">Mediano Grande</h3>
 
             <div class="containerSix">
                 <div class="containerSeven">
@@ -275,7 +254,7 @@
 
             </div>
 
-            <h3 class="fontColorThree" id="monoVolumen">Mono Volumen</h3>
+            <h3 class="fontColorThree spaceOne" id="monoVolumen">Mono Volumen</h3>
 
             <div class="containerSix">
                 <div class="containerSeven">
@@ -329,7 +308,7 @@
 
             </div>
 
-            <h3 class="fontColorThree" id="suv">SUV</h3>
+            <h3 class="fontColorThree spaceOne" id="suv">SUV</h3>
 
             <div class="containerSix">
                 <div class="containerSeven">
@@ -396,7 +375,9 @@
         <img src="../img/logo.jpg" alt="logo de Aspen Rent a Car">
     </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
