--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
-                        <a class="nav-link active" aria-current="page" href="html/comoreservar.html">Como reservar?</a>
-                        <a class="nav-link" href="html/flota.html">Flota</a>
-                        <a class="nav-link" href="html/condiciones.html">Preguntas Frequentes</a>
-                        <a class="nav-link" href="html/recorridos.html">Recorridos</a>
-                        <a class="nav-link" href="html/contacto.html">Contacto</a>
+                        <a class="nav-link active buttonOne" aria-current="page" href="html/comoreservar.html">Como reservar?</a>
+                        <a class="nav-link buttonOne" href="html/flota.html">Flota</a>
+                        <a class="nav-link buttonOne" href="html/condiciones.html">Preguntas Frequentes</a>
+                        <a class="nav-link buttonOne" href="html/recorridos.html">Recorridos</a>
+                        <a class="nav-link buttonOne" href="html/contacto.html">Contacto</a>
                         <a class="nav-link backgroundColorTwo" href="html/reservar.html">Reservar</a>
                     </div>
                 </div>
