--- a/html/contacto.html
+++ b/html/contacto.html
@@ -25,11 +25,11 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
-                        <a class="nav-link active" aria-current="page" href="comoreservar.html">Como reservar?</a>
-                        <a class="nav-link" href="flota.html">Flota</a>
-                        <a class="nav-link" href="condiciones.html">Preguntas Frequentes</a>
-                        <a class="nav-link" href="recorridos.html">Recorridos</a>
-                        <a class="nav-link" href="contacto.html">Contacto</a>
+                        <a class="nav-link active buttonOne" aria-current="page" href="comoreservar.html">Como reservar?</a>
+                        <a class="nav-link buttonOne" href="flota.html">Flota</a>
+                        <a class="nav-link buttonOne" href="condiciones.html">Preguntas Frequentes</a>
+                        <a class="nav-link buttonOne" href="recorridos.html">Recorridos</a>
+                        <a class="nav-link buttonOne" href="contacto.html">Contacto</a>
                         <a class="nav-link backgroundColorTwo" href="reservar.html">Reservar</a>
                     </div>
                 </div>
