Flota.html responsive and details adjusted

--- a/html/flota.html
+++ b/html/flota.html
@@ -92,7 +92,7 @@
                 </div>
             </div>
 
-            <h3 class="fontColorThree spaceOne" id="compacto">Compacto</h3>
+            <h3 class="fontColorThree spaceTwo" id="compacto">Compacto</h3>
 
             <div class="containerSix">
                 <div class="containerSeven">
@@ -146,7 +146,7 @@
 
             </div>
 
-            <h3 class="fontColorThree spaceOne" id="mediano">Mediano</h3>
+            <h3 class="fontColorThree spaceTwo" id="mediano">Mediano</h3>
 
             <div class="containerSix">
                 <div class="containerSeven">
@@ -200,7 +200,7 @@
 
             </div>
 
-            <h3 class="fontColorThree spaceOne" id="medianoGrande">Mediano Grande</h3>
+            <h3 class="fontColorThree spaceTwo" id="medianoGrande">Mediano Grande</h3>
 
             <div class="containerSix">
                 <div class="containerSeven">
@@ -254,7 +254,7 @@
 
             </div>
 
-            <h3 class="fontColorThree spaceOne" id="monoVolumen">Mono Volumen</h3>
+            <h3 class="fontColorThree spaceTwo" id="monoVolumen">Mono Volumen</h3>
 
             <div class="containerSix">
                 <div class="containerSeven">
@@ -308,7 +308,7 @@
 
             </div>
 
-            <h3 class="fontColorThree spaceOne" id="suv">SUV</h3>
+            <h3 class="fontColorThree spaceTwo" id="suv">SUV</h3>
 
             <div class="containerSix">
                 <div class="containerSeven">
