--- a/html/contacto.html
+++ b/html/contacto.html
@@ -39,24 +39,28 @@
     <main>
         <form>
             <fieldset>
+                <div class="containerNine">
                 <legend class="fontColorOne">Datos Personales</legend>
                 <label for="nombre">Nombre:</label><br>
-                <input type="text" id="nombre" name="nombre" placeholder="ejemplo: Lionel" required><br>
+                <input type="text" id="nombre" name="nombre" placeholder="ejemplo: Lionel" required class="widthOne"><br>
                 <label for="apellido">Apellido:</label><br>
-                <input type="text" id="apellido" name="apellido" placeholder="ejemplo: Messi" required><br>
+                <input type="text" id="apellido" name="apellido" placeholder="ejemplo: Messi" required class="widthOne"><br>
                 <label for="email">E-mail:</label><br>
-                <input type="email" id="email" name="email" placeholder="ejemplo: lionel.messi@gmail.com" required><br>
+                <input type="email" id="email" name="email" placeholder="ejemplo: lionel.messi@gmail.com" required class="widthOne"><br>
                 <label for="telefono"> Telefono:</label><br>
-                <input type="text" id="telefono" name="telefono" placeholder="ejemplo:+54115678019" required><br>
+                <input type="text" id="telefono" name="telefono" placeholder="ejemplo:+54115678019" required class="widthOne"><br>
                 <label for="whatsapp">Whatsapp:</label><br>
-                <input type="text" id="whatsapp" name="whatsapp" placeholder="ejemplo:+54115874685" required><br>
+                <input type="text" id="whatsapp" name="whatsapp" placeholder="ejemplo:+54115874685" required class="widthOne"><br>
+            </div>
             </fieldset>
             <br>
             <fieldset>
+                <div class="containerNine">
                 <legend class="fontColorOne">Comentarios</legend>
                 <textarea name="message"
-                    placeholder="Deje aqui cualquier comentario adicional o requerimiento extra no cubierto en este formulario"></textarea>
-            </fieldset>
+                    placeholder="Deje aqui cualquier comentario adicional o requerimiento extra no cubierto en este formulario" class="widthOne"></textarea>
+                </div>
+                </fieldset>
             <br>
             <input type="submit" value="Submit"> <!--en el futuro lo conectaré donde vaya-->
         </form>
