--- a/html/reservar.html
+++ b/html/reservar.html
@@ -42,24 +42,26 @@
     <main>
         <form>
             <fieldset>
+                <div class="containerNine">
                 <legend class="fontColorOne">Datos Personales</legend>
                 <label for="nombre">Nombre:</label><br>
-                <input type="text" id="nombre" name="nombre" placeholder="ejemplo: Lionel" required><br>
+                <input type="text" id="nombre" name="nombre" placeholder="ejemplo: Lionel" required class="widthOne"><br>
                 <label for="apellido">Apellido:</label><br>
-                <input type="text" id="apellido" name="apellido" placeholder="ejemplo: Messi" required><br>
+                <input type="text" id="apellido" name="apellido" placeholder="ejemplo: Messi" required class="widthOne"><br>
                 <label for="email">E-mail:</label><br>
-                <input type="email" id="email" name="email" placeholder="ejemplo: lionel.messi@gmail.com" required><br>
+                <input type="email" id="email" name="email" placeholder="ejemplo: lionel.messi@gmail.com" required class="widthOne"><br>
                 <label for="telefono"> Telefono:</label><br>
-                <input type="text" id="telefono" name="telefono" placeholder="ejemplo:+54336433881" required><br>
+                <input type="text" id="telefono" name="telefono" placeholder="ejemplo:+54336433881" required class="widthOne"><br>
                 <label for="whatsapp">Whatsapp:</label><br>
-                <input type="text" id="whatsapp" name="whatsapp" placeholder="ejemplo:+54336433881" required><br>
+                <input type="text" id="whatsapp" name="whatsapp" placeholder="ejemplo:+54336433881" required class="widthOne"><br>
+            </div>
             </fieldset>
             <br>
             <fieldset>
+                <div class="containerNine">
                 <legend class="fontColorOne">Datos de su reserva</legend>
                 <p>Motivo de viaje:</p>
-                <input type="radio" id="viaje de negocios" name="motivo de viaje"><label for="viaje de negocios"> viaje
-                    de
+                <input type="radio" id="viaje de negocios" name="motivo de viaje"><label for="viaje de negocios"> viaje               de
                     negocios</label><br>
                 <input type="radio" id="viaje de placer" name="motivo de viaje"><label for="viaje de placer"> viaje de
                     placer</label>
@@ -72,9 +74,10 @@
                 <label for="fecha y hora de devolucion"> Fecha y Horario de Devolucion</label> <input
                     type="datetime-local" id="fecha y hora de devolucion" name="fecha y hora de devolucion">
                 <br>
+                <br>
                 <P>
                     <label for="categoria de auto"> Seleccione la catergoria de auto que prefiere:</label>
-                    <input list="categoria de auto">
+                    <input list="categoria de auto" class="widthOne">
                     <datalist id="categoria de auto">
                         <option value="Economico (E)">
                         <option value="Compacto (C)">
@@ -86,7 +89,8 @@
                 </p>
                 <p>Comentarios Adicionales</p>
                 <textarea name="message"
-                    placeholder="Deje aqui cualquier comentario adicional o requerimiento extra no cubierto en este formulario"></textarea>
+                    placeholder="Deje aqui cualquier comentario adicional o requerimiento extra no cubierto en este formulario" class="widthOne"></textarea>
+                </div>
             </fieldset>
             <br>
             <input type="submit" value="Submit">
