I formatted all documents prior to handing in

--- a/html/reservar.html
+++ b/html/reservar.html
@@ -26,7 +26,8 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
-                        <a class="nav-link active buttonOne" aria-current="page" href="comoreservar.html">Como reservar?</a>
+                        <a class="nav-link active buttonOne" aria-current="page" href="comoreservar.html">Como
+                            reservar?</a>
                         <a class="nav-link buttonOne" href="flota.html">Flota</a>
                         <a class="nav-link buttonOne" href="condiciones.html">Preguntas Frequentes</a>
                         <a class="nav-link buttonOne" href="recorridos.html">Recorridos</a>
@@ -43,53 +44,61 @@
         <form>
             <fieldset>
                 <div class="containerNine">
-                <legend class="fontColorOne">Datos Personales</legend>
-                <label for="nombre">Nombre:</label><br>
-                <input type="text" id="nombre" name="nombre" placeholder="ejemplo: Lionel" required class="widthOne"><br>
-                <label for="apellido">Apellido:</label><br>
-                <input type="text" id="apellido" name="apellido" placeholder="ejemplo: Messi" required class="widthOne"><br>
-                <label for="email">E-mail:</label><br>
-                <input type="email" id="email" name="email" placeholder="ejemplo: lionel.messi@gmail.com" required class="widthOne"><br>
-                <label for="telefono"> Telefono:</label><br>
-                <input type="text" id="telefono" name="telefono" placeholder="ejemplo:+54336433881" required class="widthOne"><br>
-                <label for="whatsapp">Whatsapp:</label><br>
-                <input type="text" id="whatsapp" name="whatsapp" placeholder="ejemplo:+54336433881" required class="widthOne"><br>
-            </div>
+                    <legend class="fontColorOne">Datos Personales</legend>
+                    <label for="nombre">Nombre:</label><br>
+                    <input type="text" id="nombre" name="nombre" placeholder="ejemplo: Lionel" required
+                        class="widthOne"><br>
+                    <label for="apellido">Apellido:</label><br>
+                    <input type="text" id="apellido" name="apellido" placeholder="ejemplo: Messi" required
+                        class="widthOne"><br>
+                    <label for="email">E-mail:</label><br>
+                    <input type="email" id="email" name="email" placeholder="ejemplo: lionel.messi@gmail.com" required
+                        class="widthOne"><br>
+                    <label for="telefono"> Telefono:</label><br>
+                    <input type="text" id="telefono" name="telefono" placeholder="ejemplo:+54336433881" required
+                        class="widthOne"><br>
+                    <label for="whatsapp">Whatsapp:</label><br>
+                    <input type="text" id="whatsapp" name="whatsapp" placeholder="ejemplo:+54336433881" required
+                        class="widthOne"><br>
+                </div>
             </fieldset>
             <br>
             <fieldset>
                 <div class="containerNine">
-                <legend class="fontColorOne">Datos de su reserva</legend>
-                <p>Motivo de viaje:</p>
-                <input type="radio" id="viaje de negocios" name="motivo de viaje"><label for="viaje de negocios"> viaje               de
-                    negocios</label><br>
-                <input type="radio" id="viaje de placer" name="motivo de viaje"><label for="viaje de placer"> viaje de
-                    placer</label>
-                <br>
-                <br>
-                <label for="fecha y hora de retiro"> Fecha y Horario de Retiro </label> <input type="datetime-local"
-                    id="fecha y hora de retiro" name="fecha y hora de retiro">
-                <br>
-                <br>
-                <label for="fecha y hora de devolucion"> Fecha y Horario de Devolucion</label> <input
-                    type="datetime-local" id="fecha y hora de devolucion" name="fecha y hora de devolucion">
-                <br>
-                <br>
-                <P>
-                    <label for="categoria de auto"> Seleccione la catergoria de auto que prefiere:</label>
-                    <input list="categoria de auto" class="widthOne">
-                    <datalist id="categoria de auto">
-                        <option value="Economico (E)">
-                        <option value="Compacto (C)">
-                        <option value="Mediano (M)">
-                        <option value="Mediano Grande (MG)">
-                        <option value="Mono Volumen (P)>">
-                        <option value="SUV">
-                    </datalist>
-                </p>
-                <p>Comentarios Adicionales</p>
-                <textarea name="message"
-                    placeholder="Deje aqui cualquier comentario adicional o requerimiento extra no cubierto en este formulario" class="widthOne"></textarea>
+                    <legend class="fontColorOne">Datos de su reserva</legend>
+                    <p>Motivo de viaje:</p>
+                    <input type="radio" id="viaje de negocios" name="motivo de viaje"><label for="viaje de negocios">
+                        viaje de
+                        negocios</label><br>
+                    <input type="radio" id="viaje de placer" name="motivo de viaje"><label for="viaje de placer"> viaje
+                        de
+                        placer</label>
+                    <br>
+                    <br>
+                    <label for="fecha y hora de retiro"> Fecha y Horario de Retiro </label> <input type="datetime-local"
+                        id="fecha y hora de retiro" name="fecha y hora de retiro">
+                    <br>
+                    <br>
+                    <label for="fecha y hora de devolucion"> Fecha y Horario de Devolucion</label> <input
+                        type="datetime-local" id="fecha y hora de devolucion" name="fecha y hora de devolucion">
+                    <br>
+                    <br>
+                    <P>
+                        <label for="categoria de auto"> Seleccione la catergoria de auto que prefiere:</label>
+                        <input list="categoria de auto" class="widthOne">
+                        <datalist id="categoria de auto">
+                            <option value="Economico (E)">
+                            <option value="Compacto (C)">
+                            <option value="Mediano (M)">
+                            <option value="Mediano Grande (MG)">
+                            <option value="Mono Volumen (P)>">
+                            <option value="SUV">
+                        </datalist>
+                    </p>
+                    <p>Comentarios Adicionales</p>
+                    <textarea name="message"
+                        placeholder="Deje aqui cualquier comentario adicional o requerimiento extra no cubierto en este formulario"
+                        class="widthOne"></textarea>
                 </div>
             </fieldset>
             <br>
