--- a/html/comoreservar.html
+++ b/html/comoreservar.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="../css/style.css">
     <title>Como reservar? - Aspen Rent a Car</title>
 </head>
@@ -24,7 +25,8 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
-                        <a class="nav-link active buttonOne" aria-current="page" href="comoreservar.html">Como reservar?</a>
+                        <a class="nav-link active buttonOne" aria-current="page" href="comoreservar.html">Como
+                            reservar?</a>
                         <a class="nav-link buttonOne" href="flota.html">Flota</a>
                         <a class="nav-link buttonOne" href="condiciones.html">Preguntas Frequentes</a>
                         <a class="nav-link buttonOne" href="recorridos.html">Recorridos</a>
@@ -39,53 +41,56 @@
         <section>
             <h1 class="fontColorOne spaceOne">Como reservar con Aspen Rent a Car?</h1>
             <div class="containerThree">
-            <div class="containerEight">
-                <img src="../img/uno.jpg" alt="icono con el numero 1">
-                <br>
-                <img src="../img/autonegro.jpg" alt="icono de un auto">
-                <h4><span class="fontColorOne">Nuestra Flota</span></h4>
-                <p>Chequea nuestra flota y decide cual se ajusta a tus necesidades</p>
-            </div>
-            <div class="containerEight">
-                <img src="../img/dos.jpg" alt="icono con el numero 2">
-                <br>
-                <img src="../img/signopregunta.jpg" alt="icono de un signo de pregunta>">
-                <h4><span class="fontColorOne">Condiciones generales y FAQ's</span></h4>
-                <p>Asegurate de leer los Términos y Condiciones generales.</p>
-                <p>Si aún tienes dudas, encontrarás la sección dedicada preguntas frequentes</p>
-            </div>
-            <div class="containerEight">
-                <img src="../img/tres.jpg" alt="icono con el numero 3">
-                <br>
-                <img src="../img/Calendario.jpg" alt="icono de un calendario">
-                <h4><span class="fontColorOne">Consultar disponibilidad</span></h4>
-                <p>Haz click en Consultar Disponibilidad y completa el formulario con todos los datos solicitados</p>
-                <p>En un plazo de 24 horas, nuestro equipo de Reservas confirmara la disponibilidad para que puedas
-                    efectuar
-                    el pago de tu reserva según condiciones.</p>
-            </div>
-            <div class="containerEight">
-                <img src="../img/cuatro.jpg" alt="icono con el numero 4">
-                <br>
-                <img src="../img/tick.jpg" alt="Icono de un tilde">
-                <h4><span class="fontColorOne">Confirmacion de reserva</span></h4>
-                <p>Confirmado el pago, recibirás un correo de confirmación con todos los datos de tu reserva.</p>
+                <div class="containerEight">
+                    <img src="../img/uno.jpg" alt="icono con el numero 1">
+                    <br>
+                    <img src="../img/autonegro.jpg" alt="icono de un auto">
+                    <h4><span class="fontColorOne">Nuestra Flota</span></h4>
+                    <p>Chequea nuestra flota y decide cual se ajusta a tus necesidades</p>
+                </div>
+                <div class="containerEight">
+                    <img src="../img/dos.jpg" alt="icono con el numero 2">
+                    <br>
+                    <img src="../img/signopregunta.jpg" alt="icono de un signo de pregunta>">
+                    <h4><span class="fontColorOne">Condiciones generales y FAQ's</span></h4>
+                    <p>Asegurate de leer los Términos y Condiciones generales.</p>
+                    <p>Si aún tienes dudas, encontrarás la sección dedicada preguntas frequentes</p>
+                </div>
+                <div class="containerEight">
+                    <img src="../img/tres.jpg" alt="icono con el numero 3">
+                    <br>
+                    <img src="../img/Calendario.jpg" alt="icono de un calendario">
+                    <h4><span class="fontColorOne">Consultar disponibilidad</span></h4>
+                    <p>Haz click en Consultar Disponibilidad y completa el formulario con todos los datos solicitados
+                    </p>
+                    <p>En un plazo de 24 horas, nuestro equipo de Reservas confirmara la disponibilidad para que puedas
+                        efectuar
+                        el pago de tu reserva según condiciones.</p>
+                </div>
+                <div class="containerEight">
+                    <img src="../img/cuatro.jpg" alt="icono con el numero 4">
+                    <br>
+                    <img src="../img/tick.jpg" alt="Icono de un tilde">
+                    <h4><span class="fontColorOne">Confirmacion de reserva</span></h4>
+                    <p>Confirmado el pago, recibirás un correo de confirmación con todos los datos de tu reserva.</p>
                 </div>
                 <div>
-                <img src="../img/stars.jpg" alt="icono de unas estrellas">
-                <p>No te olvides de chequear nuestra sección de Recorridos sugeridos, no solo para Puerto Iguazu,
-                    también para Misiones y Brasil</p>
-                <p>Asegurate de sacar el máximo provecho de tu alquiler y no dejes de conocer bellezas escóndidas de
-                    nuestra región</p>
+                    <img src="../img/stars.jpg" alt="icono de unas estrellas">
+                    <p>No te olvides de chequear nuestra sección de Recorridos sugeridos, no solo para Puerto Iguazu,
+                        también para Misiones y Brasil</p>
+                    <p>Asegurate de sacar el máximo provecho de tu alquiler y no dejes de conocer bellezas escóndidas de
+                        nuestra región</p>
+                </div>
             </div>
-        </div>
         </section>
     </main>
     <hr>
     <footer>
         <img src="../img/logo.jpg" alt="logo de Aspen Rent a Car">
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
