--- a/html/contacto.html
+++ b/html/contacto.html
@@ -25,7 +25,8 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
-                        <a class="nav-link active buttonOne" aria-current="page" href="comoreservar.html">Como reservar?</a>
+                        <a class="nav-link active buttonOne" aria-current="page" href="comoreservar.html">Como
+                            reservar?</a>
                         <a class="nav-link buttonOne" href="flota.html">Flota</a>
                         <a class="nav-link buttonOne" href="condiciones.html">Preguntas Frequentes</a>
                         <a class="nav-link buttonOne" href="recorridos.html">Recorridos</a>
@@ -40,27 +41,33 @@
         <form>
             <fieldset>
                 <div class="containerNine">
-                <legend class="fontColorOne">Datos Personales</legend>
-                <label for="nombre">Nombre:</label><br>
-                <input type="text" id="nombre" name="nombre" placeholder="ejemplo: Lionel" required class="widthOne"><br>
-                <label for="apellido">Apellido:</label><br>
-                <input type="text" id="apellido" name="apellido" placeholder="ejemplo: Messi" required class="widthOne"><br>
-                <label for="email">E-mail:</label><br>
-                <input type="email" id="email" name="email" placeholder="ejemplo: lionel.messi@gmail.com" required class="widthOne"><br>
-                <label for="telefono"> Telefono:</label><br>
-                <input type="text" id="telefono" name="telefono" placeholder="ejemplo:+54115678019" required class="widthOne"><br>
-                <label for="whatsapp">Whatsapp:</label><br>
-                <input type="text" id="whatsapp" name="whatsapp" placeholder="ejemplo:+54115874685" required class="widthOne"><br>
-            </div>
+                    <legend class="fontColorOne">Datos Personales</legend>
+                    <label for="nombre">Nombre:</label><br>
+                    <input type="text" id="nombre" name="nombre" placeholder="ejemplo: Lionel" required
+                        class="widthOne"><br>
+                    <label for="apellido">Apellido:</label><br>
+                    <input type="text" id="apellido" name="apellido" placeholder="ejemplo: Messi" required
+                        class="widthOne"><br>
+                    <label for="email">E-mail:</label><br>
+                    <input type="email" id="email" name="email" placeholder="ejemplo: lionel.messi@gmail.com" required
+                        class="widthOne"><br>
+                    <label for="telefono"> Telefono:</label><br>
+                    <input type="text" id="telefono" name="telefono" placeholder="ejemplo:+54115678019" required
+                        class="widthOne"><br>
+                    <label for="whatsapp">Whatsapp:</label><br>
+                    <input type="text" id="whatsapp" name="whatsapp" placeholder="ejemplo:+54115874685" required
+                        class="widthOne"><br>
+                </div>
             </fieldset>
             <br>
             <fieldset>
                 <div class="containerNine">
-                <legend class="fontColorOne">Comentarios</legend>
-                <textarea name="message"
-                    placeholder="Deje aqui cualquier comentario adicional o requerimiento extra no cubierto en este formulario" class="widthOne"></textarea>
+                    <legend class="fontColorOne">Comentarios</legend>
+                    <textarea name="message"
+                        placeholder="Deje aqui cualquier comentario adicional o requerimiento extra no cubierto en este formulario"
+                        class="widthOne"></textarea>
                 </div>
-                </fieldset>
+            </fieldset>
             <br>
             <input type="submit" value="Submit"> <!--en el futuro lo conectaré donde vaya-->
         </form>
@@ -70,7 +77,9 @@
     <footer>
         <img src="../img/logo.jpg" alt="logo de Aspen Rent a Car">
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
