--- a/html/flota.html
+++ b/html/flota.html
@@ -26,7 +26,8 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
-                        <a class="nav-link active buttonOne" aria-current="page" href="comoreservar.html">Como reservar?</a>
+                        <a class="nav-link active buttonOne" aria-current="page" href="comoreservar.html">Como
+                            reservar?</a>
                         <a class="nav-link buttonOne" href="flota.html">Flota</a>
                         <a class="nav-link buttonOne" href="condiciones.html">Preguntas Frequentes</a>
                         <a class="nav-link buttonOne" href="recorridos.html">Recorridos</a>
