--- a/html/condiciones.html
+++ b/html/condiciones.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="En Aspen Car Rental, te ofrecemos transparencia y claridad. Descubre nuestras condiciones generales de alquiler y contrato, así como una completa sección de preguntas frecuentes antes, durante y después del alquiler. Preparamos toda la información que necesitas para una experiencia de alquiler de vehículos sin sorpresas. ¡Planifica tu viaje con confianza!">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="../css/style.css">
