--- a/html/contacto.html
+++ b/html/contacto.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="¿Tienes preguntas sobre nuestro servicio de alquiler de autos en Iguazú. Estamos aquí para ayudarte. Utiliza nuestro formulario de contacto para consultas y dudas. Nuestro equipo estará encantado de brindarte la información que necesitas. ¡Contáctanos hoy mismo y planifica tu viaje con confianza!">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="../css/style.css">
