--- a/html/recorridos.html
+++ b/html/recorridos.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Maximiza tu experiencia en Iguazú y sus alrededores con nuestros recorridos sugeridos. Descubre rutas escénicas y destinos imperdibles mientras disfrutas de tu auto de alquiler de Aspen Car Rental. Explora la belleza de la región a tu propio ritmo y crea recuerdos inolvidables en tu viaje.">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="../css/style.css">
