MIXIN added to the anchor tag

--- a/html/flota.html
+++ b/html/flota.html
@@ -369,7 +369,7 @@
 
             <br>
             <br>
-            <a href="../Index.html" class="fontColorOne">Voler a Pagina de Inicio</a>
+            <a href="../Index.html" class="fontColorOne anchorOne">Volver a Pagina de Inicio</a>
         </section>
     </main>
     <hr>
