Favicon added in all pages

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
 
     <title>Aspen Rent a Car - Iguazu</title>
+    <link rel="icon" href="img/favicon.png" type="image/x-icon">
+
 </head>
 
 <body>
