--- a/html/contacto.html
+++ b/html/contacto.html
@@ -9,6 +9,7 @@
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="../css/style.css">
     <title>Contacto - Aspen Rent a Car</title>
+    <link rel="icon" href="../img/favicon.png" type="image/x-icon">
 </head>
 
 <body>
