--- a/html/flota.html
+++ b/html/flota.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" type="text/css" href="../css/style.css">
 
     <title>Flota - Aspen Rent a Car</title>
+    <link rel="icon" href="../img/favicon.png" type="image/x-icon">
 </head>
 
 <body>
