--- a/html/reservar.html
+++ b/html/reservar.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" type="text/css" href="../css/style.css">
 
     <title>Reservar - Aspen Rent a Car </title>
+    
+    <link rel="icon" href="../img/favicon.png" type="image/x-icon">
 </head>
 
 <body>
