--- a/html/reservar.html
+++ b/html/reservar.html
@@ -17,7 +17,7 @@
 <body>
     <header class="fontColorOne fontColorTwo backgroundColorOne">
         <div class="imageOne">
-            <img src="../img/logo.jpg" alt="logo de Aspen Rent a Car">
+            <a href="../index.html"> <img src="../img/logo.jpg" alt="logo de Aspen Rent a Car"></a>
         </div>
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
