--- a/html/comoreservar.html
+++ b/html/comoreservar.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Reserva tu auto en Iguazú, Argentina, con Aspen Car Rental en tan solo 4 simples pasos. Nuestra página de reservas te ofrece una experiencia sencilla y eficiente para asegurarte un vehículo confiable en tu viaje. ¡Haz tu reserva hoy y comienza a explorar la región con facilidad">
+    <meta name="description"
+        content="Reserva tu auto en Iguazú, Argentina, con Aspen Car Rental en tan solo 4 simples pasos. Nuestra página de reservas te ofrece una experiencia sencilla y eficiente para asegurarte un vehículo confiable en tu viaje. ¡Haz tu reserva hoy y comienza a explorar la región con facilidad">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="../css/style.css">
@@ -15,7 +16,7 @@
 <body>
     <header class="fontColorOne fontColorTwo backgroundColorOne">
         <div class="imageOne">
-           <a href="../index.html"> <img src="../img/logo.jpg" alt="logo de Aspen Rent a Car"> </a>
+            <a href="../index.html"> <img src="../img/logo.jpg" alt="logo de Aspen Rent a Car"> </a>
         </div>
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
