--- a/html/flota.html
+++ b/html/flota.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Explora nuestra variada flota de vehículos disponibles para alquiler en Iguazú. Desde compactos hasta SUVs de lujo, cada vehículo está cuidadosamente clasificado y acompañado de información detallada. Encuentra el vehículo perfecto para tu viaje y conduce con comodidad y estilo. Descubre más sobre nuestras opciones de alquiler de autos hoy.">
+    <meta name="description"
+        content="Explora nuestra variada flota de vehículos disponibles para alquiler en Iguazú. Desde compactos hasta SUVs de lujo, cada vehículo está cuidadosamente clasificado y acompañado de información detallada. Encuentra el vehículo perfecto para tu viaje y conduce con comodidad y estilo. Descubre más sobre nuestras opciones de alquiler de autos hoy.">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="../css/style.css">
