transparency on the navbar and positioned it top right

--- a/html/condiciones.html
+++ b/html/condiciones.html
@@ -21,28 +21,29 @@
                 <div class="imageThree">
                 </div>
             </a>
-        </div>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="../index.html">Inicio</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
-                    aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                    <div class="navbar-nav">
-                        <a class="nav-link active buttonOne" aria-current="page" href="comoreservar.html">Como
-                            reservar?</a>
-                        <a class="nav-link buttonOne" href="flota.html">Flota</a>
-                        <a class="nav-link buttonOne" href="condiciones.html">Preguntas Frequentes</a>
-                        <a class="nav-link buttonOne" href="recorridos.html">Recorridos</a>
-                        <a class="nav-link buttonOne" href="contacto.html">Contacto</a>
-                        <a class="nav-link backgroundColorTwo" href="reservar.html">Reservar</a>
+            <div class="navegador">
+                <nav class="navbar navbar-expand-lg">
+                    <div class="container-fluid">
+                        <a class="navbar-brand" href="../index.html">Inicio</a>
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup"
+                            aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                            <div class="navbar-nav">
+                                <a class="nav-link active buttonOne" aria-current="page" href="comoreservar.html">Como
+                                    reservar?</a>
+                                <a class="nav-link buttonOne" href="flota.html">Flota</a>
+                                <a class="nav-link buttonOne" href="condiciones.html">Preguntas Frequentes</a>
+                                <a class="nav-link buttonOne" href="recorridos.html">Recorridos</a>
+                                <a class="nav-link buttonOne" href="contacto.html">Contacto</a>
+                                <a class="nav-link backgroundColorTwo" href="reservar.html">Reservar</a>
+                            </div>
+                        </div>
                     </div>
-                </div>
+                </nav>
             </div>
-        </nav>
     </header>
     <main>
         <section>
