--- a/index.html
+++ b/index.html
@@ -20,31 +20,33 @@
     <header class="fontColorOne fontColorTwo backgroundColorOne">
         <div class="imageOne">
             <a href="../index.html">
-                <div class="imageThree">
-                </div>
+                <div class="imageThree"></div>
             </a>
-        </div>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="../index.html">Inicio</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
-                    aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                    <div class="navbar-nav">
-                        <a class="nav-link active buttonOne" aria-current="page" href="html/comoreservar.html">Como
-                            reservar?</a>
-                        <a class="nav-link buttonOne" href="html/flota.html">Flota</a>
-                        <a class="nav-link buttonOne" href="html/condiciones.html">Preguntas Frequentes</a>
-                        <a class="nav-link buttonOne" href="html/recorridos.html">Recorridos</a>
-                        <a class="nav-link buttonOne" href="html/contacto.html">Contacto</a>
-                        <a class="nav-link backgroundColorTwo" href="html/reservar.html">Reservar</a>
+            <div class="navegador">
+                <nav class="navbar navbar-expand-lg">
+                    <div class="container-fluid">
+                        <a class="navbar-brand" href="../index.html">Inicio</a>
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup"
+                            aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                            <div class="navbar-nav">
+                                <a class="nav-link active buttonOne" aria-current="page"
+                                    href="html/comoreservar.html">Como
+                                    reservar?</a>
+                                <a class="nav-link buttonOne" href="html/flota.html">Flota</a>
+                                <a class="nav-link buttonOne" href="html/condiciones.html">Preguntas Frequentes</a>
+                                <a class="nav-link buttonOne" href="html/recorridos.html">Recorridos</a>
+                                <a class="nav-link buttonOne" href="html/contacto.html">Contacto</a>
+                                <a class="nav-link backgroundColorTwo" href="html/reservar.html">Reservar</a>
+                            </div>
+                        </div>
                     </div>
-                </div>
+                </nav>
             </div>
-        </nav>
+        </div>
     </header>
     <main>
         <section class="containerOne">
@@ -66,52 +68,54 @@
             <h1 class="fontColorOne"> Por que elegirnos?</h1>
             <div class="containerThree">
                 <div class="containerFour">
-                    <img src="img/atencion.jpg" alt="icono de una persona brindando excelente servicio a un cliente">
-                    <h3>Atencion Personalizada</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum, rem?</p>
+                    <img src="img/atencion.jpg" alt="icono de una persona brindando excelente servicio a un cliente" class="imageTwelve">
+                    <h3 class="containerTen">Atencion Personalizada</h3>
+                    <p class="containerEleven">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum, rem?</p>
                 </div>
                 <div class="containerFour">
-                    <img src="img/flota.jpg" alt="icono de un auto representanto nuestra flota de vehiculos">
-                    <h3>Flota Moderna</h3>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minima molestiae id dolor ipsam vel
+                    <img src="img/flota.jpg" alt="icono de un auto representanto nuestra flota de vehiculos" class="imageTwelve">
+                    <h3 class="containerTen">Flota Moderna</h3>
+                    <p class="containerEleven">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minima molestiae id dolor ipsam vel
                         doloribus.
                     </p>
                 </div>
                 <div class="containerFour">
-                    <img src="img/kms.jpg" alt="un icono de una ruta">
-                    <h3>Kilometros Ilimitados</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corporis deleniti modi natus?</p>
+                    <img src="img/kms.jpg" alt="un icono de una ruta" class="imageTwelve">
+                    <h3 class="containerTen">Kilometros Ilimitados</h3>
+                    <p class="containerEleven">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corporis deleniti modi natus?</p>
                 </div>
                 <div class="containerFour">
-                    <img src="img/checkin.jpg" alt="icono de un express check in">
-                    <h3>Check in express</h3>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odio magni inventore veniam ducimus
+                    <img src="img/checkin.jpg" alt="icono de un express check in" class="imageTwelve">
+                    <h3 class="containerTen">Check in express</h3>
+                    <p class="containerEleven">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odio magni inventore veniam ducimus
                         sed.
                     </p>
                 </div>
+            </div>
+            <div class="containerThree">
                 <div class="containerFour">
                     <img src="img/entrega.jpg"
-                        alt="icono de un carrito de compras representando la devolución del vehiculo">
-                    <h3>Entrega/Devolucion en Hotel/Aeropuerto</h3>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis nemo velit iusto esse doloremque
+                        alt="icono de un carrito de compras representando la devolución del vehiculo" class="imageTwelve">
+                    <h3 class="containerTen">Entrega/Devolucion en Hotel/Aeropuerto</h3>
+                    <p class="containerEleven">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis nemo velit iusto esse doloremque
                         rerum
                         eveniet unde quos?</p>
                 </div>
                 <div class="containerFour">
-                    <img src="img/conductor.jpg" alt="icono de dos personas representando un conductor adicional">
-                    <h3>Conductor Adicional</h3>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorem!</p>
+                    <img src="img/conductor.jpg" alt="icono de dos personas representando un conductor adicional" class="imageTwelve">
+                    <h3 class="containerTen">Conductor Adicional</h3>
+                    <p class="containerEleven">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorem!</p>
                 </div>
                 <div class="containerFour">
                     <img src="img/baby.jpg"
-                        alt="icono de un carrito de bebe representando la silla de infante para el auto">
-                    <h3>Silla de Infante</h3>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odit, est! Laudantium!</p>
+                        alt="icono de un carrito de bebe representando la silla de infante para el auto" class="imageTwelve">
+                    <h3 class="containerTen">Silla de Infante</h3>
+                    <p class="containerEleven">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odit, est! Laudantium!</p>
                 </div>
                 <div class="containerFour">
-                    <img src="img/charger.jpg" alt="icono representando un cargador de auto">
-                    <h3>Cargador de Celular</h3>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed.</p>
+                    <img src="img/charger.jpg" alt="icono representando un cargador de auto" class="imageTwelve">
+                    <h3 class="containerTen">Cargador de Celular</h3>
+                    <p class="containerEleven">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed.</p>
                 </div>
             </div>
         </section>
