--- a/html/contacto.html
+++ b/html/contacto.html
@@ -20,8 +20,8 @@
                 <div class="imageThree">
                 </div>
             </a>
-        </div>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="navegador">
+        <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
                 <a class="navbar-brand" href="../index.html">Inicio</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -42,6 +42,7 @@
                 </div>
             </div>
         </nav>
+    </div>
     </header>
     <main>
         <form>
