--- a/html/reservar.html
+++ b/html/reservar.html
@@ -22,8 +22,8 @@
                 <div class="imageThree">
                 </div>
             </a>
-        </div>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="navegador">
+        <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
                 <a class="navbar-brand" href="../index.html">Inicio</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -44,7 +44,7 @@
                 </div>
             </div>
         </nav>
-
+    </div>
     </header>
 
     <main>
