--- a/html/recorridos.html
+++ b/html/recorridos.html
@@ -21,7 +21,7 @@
                 <div class="imageThree">
                 </div>
             </a>
-            <div class="navegador">
+            <div class="navegador" role="navigation">
                 <nav class="navbar navbar-expand-lg">
                     <div class="container-fluid">
                         <a class="navbar-brand" href="../index.html">Inicio</a>
