added the accesibility element aria-current=page across all the navbar links

--- a/html/reservar.html
+++ b/html/reservar.html
@@ -25,7 +25,7 @@
             <div class="navegador" role="navigation">
                 <nav class="navbar navbar-expand-lg">
                     <div class="container-fluid">
-                        <a class="navbar-brand" href="../index.html">Inicio</a>
+                        <a class="navbar-brand" aria-current="page" href="../index.html">Inicio</a>
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                             data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup"
                             aria-expanded="false" aria-label="Toggle navigation">
@@ -35,11 +35,11 @@
                             <div class="navbar-nav">
                                 <a class="nav-link active buttonOne" aria-current="page" href="comoreservar.html">Como
                                     reservar?</a>
-                                <a class="nav-link buttonOne" href="flota.html">Flota</a>
-                                <a class="nav-link buttonOne" href="condiciones.html">Preguntas Frequentes</a>
-                                <a class="nav-link buttonOne" href="recorridos.html">Recorridos</a>
-                                <a class="nav-link buttonOne" href="contacto.html">Contacto</a>
-                                <a class="nav-link backgroundColorTwo" href="reservar.html">Reservar</a>
+                                <a class="nav-link buttonOne" aria-current="page" href="flota.html">Flota</a>
+                                <a class="nav-link buttonOne" aria-current="page" href="condiciones.html">Preguntas Frequentes</a>
+                                <a class="nav-link buttonOne" aria-current="page" href="recorridos.html">Recorridos</a>
+                                <a class="nav-link buttonOne" aria-current="page" href="contacto.html">Contacto</a>
+                                <a class="nav-link backgroundColorTwo" aria-current="page" href="reservar.html">Reservar</a>
                             </div>
                         </div>
                     </div>
