--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="navegador" role="navigation">
                 <nav class="navbar navbar-expand-lg">
                     <div class="container-fluid">
-                        <a class="navbar-brand" href="../index.html">Inicio</a>
+                        <a class="navbar-brand" aria-current="page" href="../index.html">Inicio</a>
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                             data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup"
                             aria-expanded="false" aria-label="Toggle navigation">
@@ -36,11 +36,11 @@
                                 <a class="nav-link active buttonOne" aria-current="page"
                                     href="html/comoreservar.html">Como
                                     reservar?</a>
-                                <a class="nav-link buttonOne" href="html/flota.html">Flota</a>
-                                <a class="nav-link buttonOne" href="html/condiciones.html">Preguntas Frequentes</a>
-                                <a class="nav-link buttonOne" href="html/recorridos.html">Recorridos</a>
-                                <a class="nav-link buttonOne" href="html/contacto.html">Contacto</a>
-                                <a class="nav-link backgroundColorTwo" href="html/reservar.html">Reservar</a>
+                                <a class="nav-link buttonOne" aria-current="page" href="html/flota.html">Flota</a>
+                                <a class="nav-link buttonOne" aria-current="page" href="html/condiciones.html">Preguntas Frequentes</a>
+                                <a class="nav-link buttonOne" aria-current="page" href="html/recorridos.html">Recorridos</a>
+                                <a class="nav-link buttonOne" aria-current="page" href="html/contacto.html">Contacto</a>
+                                <a class="nav-link backgroundColorTwo" aria-current="page" href="html/reservar.html">Reservar</a>
                             </div>
                         </div>
                     </div>
