added the active class to all the links in the navbar to identify when in that particular page

--- a/html/reservar.html
+++ b/html/reservar.html
@@ -33,13 +33,13 @@
                         </button>
                         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                             <div class="navbar-nav">
-                                <a class="nav-link active buttonOne" aria-current="page" href="comoreservar.html">Como
+                                <a class="nav-link buttonOne" aria-current="page" href="comoreservar.html">Como
                                     reservar?</a>
                                 <a class="nav-link buttonOne" aria-current="page" href="flota.html">Flota</a>
                                 <a class="nav-link buttonOne" aria-current="page" href="condiciones.html">Preguntas Frequentes</a>
                                 <a class="nav-link buttonOne" aria-current="page" href="recorridos.html">Recorridos</a>
                                 <a class="nav-link buttonOne" aria-current="page" href="contacto.html">Contacto</a>
-                                <a class="nav-link backgroundColorTwo" aria-current="page" href="reservar.html">Reservar</a>
+                                <a class="nav-link active backgroundColorTwo" aria-current="page" href="reservar.html">Reservar</a>
                             </div>
                         </div>
                     </div>
