--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         </button>
                         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                             <div class="navbar-nav">
-                                <a class="nav-link active buttonOne" aria-current="page"
+                                <a class="nav-link buttonOne" aria-current="page"
                                     href="html/comoreservar.html">Como
                                     reservar?</a>
                                 <a class="nav-link buttonOne" aria-current="page" href="html/flota.html">Flota</a>
