--- a/html/flota.html
+++ b/html/flota.html
@@ -32,9 +32,9 @@
                         </button>
                         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                             <div class="navbar-nav">
-                                <a class="nav-link active buttonOne" aria-current="page" href="comoreservar.html">Como
+                                <a class="nav-link buttonOne" aria-current="page" href="comoreservar.html">Como
                                     reservar?</a>
-                                <a class="nav-link buttonOne" aria-current="page" href="flota.html">Flota</a>
+                                <a class="nav-link active buttonOne" aria-current="page" href="flota.html">Flota</a>
                                 <a class="nav-link buttonOne" aria-current="page" href="condiciones.html">Preguntas Frequentes</a>
                                 <a class="nav-link buttonOne" aria-current="page" href="recorridos.html">Recorridos</a>
                                 <a class="nav-link buttonOne" aria-current="page" href="contacto.html">Contacto</a>
